New in version 1.1.0:
----------------------------------------------------------------------------------------------
 * Now using clang format
 * Now using CMake
 * Added support for long (> 260 chars) file paths on Windows
 * Improved speed of the CRC check that is always performed on all user payload
 * Removed QuickLZ, zlib and bzip2. Added zstd.
 * Switched hash function from Skein to xxHash128 and (optionally) cryptographic BLAKE3
 * Reduced hash entries from 40 to 28 bytes each for better deduplication with same memory usage
 * New single-line status line that won't scroll the screen
 * Rewrote the inner loop for major speedup
 * Rewrote and simplified threading so that also files < 128 KB are processed in parallel
 * Fixed issue with detecting identical files < 4 KB in same input set