@@ -1,5 +1,5 @@
 # 2.1 gigabyte/second
-eXdupe is an ultra fast file archiver that supports data deduplication and differential backups.
+eXdupe is a fast file archiver that supports deduplication and differential backups.
 
 It's easy to use. Let's backup the entire D drive on Windows:
 
@@ -10,7 +10,7 @@ Each day we can then create a new backup that only stores the changes compared t
 `exdupe -D d:\ d.full d1.diff`<br>
 `exdupe -D d:\ d.full d2.diff`<br>
 
-It uses a sliding window where identical data blocks as small as 4 KB are being searched at byte grannularity positions across terabytes. Full bakcup of a Windows and a Linux virtual machine of 57,776 MB in total on an Intel i7-12700F with two 6 GB/s SSD disks:
+It finds identical data blocks of 4 KB at byte grannularity positions across terabytes. Example of a backup of a Windows and a Linux virtual machine of 57,776 MB in total:
 |                 |            size |  time |  options  
 |-----------------|----------------:|------:|-----:|
 | exdupe 1.1.0          | 28,005 MB  |   24 s  | -g1 -t10|
@@ -19,9 +19,7 @@ It uses a sliding window where identical data blocks as small as 4 KB are being 
 | restic          | 33,518 MB  |   72 s |  default|
 | tar+zstd        | 35,982 MB  |   35 s |  -1 -T0|
 
-Not all data is suited for deduplication and zpaq and lzma will often give much better compression ratios.
-
-Please try the latest version which is now in feature freeze and needs testing. It doubles the speed to 2.1 gigabyte/second (if not limited by storage) and improves compression ratio: [Windows](https://github.com/rrrlasse/exdupe/raw/stuff/beta/exdupe_1.1.0.dev15.exe) and [Linux amd64](https://github.com/rrrlasse/eXdupe/raw/stuff/beta/exdupe_1.1.0.dev15_linux_amd64.tar.gz).
+Try the latest development version (*backwards compatibility broken often!*) that doubles the speed and improves compression ratio: [Windows](https://github.com/rrrlasse/exdupe/raw/stuff/beta/exdupe_1.1.0.dev17.exe) and [Linux amd64](https://github.com/rrrlasse/eXdupe/raw/stuff/beta/exdupe_1.1.0.dev17_linux_amd64.tar.gz).
 
 Or get the [latest stable version](https://github.com/rrrlasse/eXdupe/releases/tag/v1.0.0).
 <img src="https://github.com/rrrlasse/exdupe/blob/stuff/cmd.webp" width="80%">
